# tela

peotir/first-flet-app/: pyproject.toml
peotir/first-flet-app/first_flet_app/: main.py  main.spec
seila/: cookies.json  flet_teste.py  test_tkinter.py  teste2.py  web_hook.py
seila/login_app/: .env  main.py
seila/login_app/controller/: controller.py
seila/login_app/model/: model.py
seila/login_app/view/: view.py
