[tool.poetry]
name = "first-flet-app"
version = "0.1.0"
description = ""
authors = ["seu nome de usuário <jonathan.biomed2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
